--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,18 @@
         
     </div>
 </body>
-<script src="./js/app.js"></script>
+<!-- <script src="./js/app.js"></script> -->
+<script>
+    window.watsonAssistantChatOptions = {
+        integrationID: "8bc401e4-9332-4986-8def-64307b38d8a3", 
+        region: "us-south", 
+        serviceInstanceID: "4cfc220c-656e-4ee8-b9e3-69e788cd1d0f", 
+        onLoad: function(instance) { instance.render(); }
+      };
+    setTimeout(function(){
+      const t=document.createElement('script');
+      t.src="https://web-chat.global.assistant.watson.appdomain.cloud/loadWatsonAssistantChat.js";
+      document.head.appendChild(t);
+    });
+  </script>
 </html>
