--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
         </h3>
     </header>
     <div class="chat-box">
-        
+        <h2>Welcome to 🤖🤖🤖HNG INTERNSHIP CHATBOT </h2>
+        <p>Feel free to interact with the bot</p>
+        <p>Ask questions about HNG eg Who is the CEO of HNG Internship </p>
+        <h3>Also type Help or Hello to start a conversation</h3>
     </div>
 </body>
 <!-- <script src="./js/app.js"></script> -->
